--- a/News_Api_JSON/Base.lproj/Main.storyboard
+++ b/News_Api_JSON/Base.lproj/Main.storyboard
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7vM-l9-n59">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,22 +12,22 @@
             <objects>
                 <viewController id="ubh-Vv-TaQ" customClass="NewsViewController" customModule="News_Api_JSON" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rPh-Uc-8vF">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="jvc-Lc-tNd">
-                                <rect key="frame" x="20" y="101" width="350" height="56"/>
+                                <rect key="frame" x="20" y="54" width="560" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="S6n-hL-TA7">
-                                <rect key="frame" x="20" y="157" width="350" height="653"/>
+                                <rect key="frame" x="20" y="110" width="560" height="490"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsTableViewCell" rowHeight="230" id="wzo-yv-b6u" customClass="NewsTableViewCell" customModule="News_Api_JSON" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="350" height="230"/>
+                                        <rect key="frame" x="0.0" y="50" width="560" height="230"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wzo-yv-b6u" id="c5i-bv-ts2">
-                                            <rect key="frame" x="0.0" y="0.0" width="350" height="230"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="230"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="247" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JEc-wP-CbL">
@@ -38,16 +37,16 @@
                                                     </constraints>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="253" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Rzy-gQ-IRQ">
-                                                    <rect key="frame" x="182.66666666666663" y="10" width="157.33333333333337" height="210"/>
+                                                    <rect key="frame" x="182.66666666666666" y="10" width="367.33333333333337" height="210"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AcX-TA-3wR">
-                                                            <rect key="frame" x="0.0" y="0.0" width="157.33333333333334" height="20.333333333333332"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="367.33333333333331" height="20.333333333333332"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y4t-rJ-Qjg">
-                                                            <rect key="frame" x="0.0" y="35.333333333333329" width="157.33333333333334" height="174.66666666666669"/>
+                                                            <rect key="frame" x="0.0" y="35.333333333333329" width="367.33333333333331" height="174.66666666666669"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -73,6 +72,10 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="3cd-O6-0bU">
+                                <rect key="frame" x="177" y="175" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7cj-VD-3Un"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -88,6 +91,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="yx9-FP-tjb"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="3cd-O6-0bU" id="ztM-9t-EpI"/>
                         <outlet property="searchBar" destination="jvc-Lc-tNd" id="y84-dg-Hjq"/>
                         <outlet property="tableView" destination="S6n-hL-TA7" id="X43-OL-cry"/>
                     </connections>
